; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-rspi.c_rspi_unprepare_message.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-rspi.c_rspi_unprepare_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_controller = type { i32 }
%struct.spi_message = type { i32 }
%struct.rspi_data = type { i32 }

@RSPI_SPCR = common dso_local global i32 0, align 4
@SPCR_SPE = common dso_local global i32 0, align 4
@RSPI_SPCMD0 = common dso_local global i32 0, align 4
@RSPI_SPSCR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_controller*, %struct.spi_message*)* @rspi_unprepare_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rspi_unprepare_message(%struct.spi_controller* %0, %struct.spi_message* %1) #0 {
  %3 = alloca %struct.spi_controller*, align 8
  %4 = alloca %struct.spi_message*, align 8
  %5 = alloca %struct.rspi_data*, align 8
  store %struct.spi_controller* %0, %struct.spi_controller** %3, align 8
  store %struct.spi_message* %1, %struct.spi_message** %4, align 8
  %6 = load %struct.spi_controller*, %struct.spi_controller** %3, align 8
  %7 = call %struct.rspi_data* @spi_controller_get_devdata(%struct.spi_controller* %6)
  store %struct.rspi_data* %7, %struct.rspi_data** %5, align 8
  %8 = load %struct.rspi_data*, %struct.rspi_data** %5, align 8
  %9 = load %struct.rspi_data*, %struct.rspi_data** %5, align 8
  %10 = load i32, i32* @RSPI_SPCR, align 4
  %11 = call i32 @rspi_read8(%struct.rspi_data* %9, i32 %10)
  %12 = load i32, i32* @SPCR_SPE, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = load i32, i32* @RSPI_SPCR, align 4
  %16 = call i32 @rspi_write8(%struct.rspi_data* %8, i32 %14, i32 %15)
  %17 = load %struct.rspi_data*, %struct.rspi_data** %5, align 8
  %18 = load %struct.rspi_data*, %struct.rspi_data** %5, align 8
  %19 = getelementptr inbounds %struct.rspi_data, %struct.rspi_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @RSPI_SPCMD0, align 4
  %22 = call i32 @rspi_write16(%struct.rspi_data* %17, i32 %20, i32 %21)
  %23 = load %struct.rspi_data*, %struct.rspi_data** %5, align 8
  %24 = load i32, i32* @RSPI_SPSCR, align 4
  %25 = call i32 @rspi_write8(%struct.rspi_data* %23, i32 0, i32 %24)
  ret i32 0
}

declare dso_local %struct.rspi_data* @spi_controller_get_devdata(%struct.spi_controller*) #1

declare dso_local i32 @rspi_write8(%struct.rspi_data*, i32, i32) #1

declare dso_local i32 @rspi_read8(%struct.rspi_data*, i32) #1

declare dso_local i32 @rspi_write16(%struct.rspi_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
